@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,13 +21,18 @@
  * questions.
  */
 
-/**
- * @test
- * @summary Stress test virtual threads with SynchronousQueue and LinkedTransferQueue
+/*
+ * @test id=sq
+ * @summary Stress test virtual threads with a SynchronousQueue
  * @requires vm.debug != true
- * @compile --enable-preview -source ${jdk.version} PingPong.java
- * @run main/othervm --enable-preview PingPong SQ 1000000
- * @run main/othervm --enable-preview PingPong LTQ 1000000
+ * @run main PingPong SQ 500000
+ */
+
+/*
+ * @test id=ltq
+ * @summary Stress test virtual threads with a LinkedTransferQueue
+ * @requires vm.debug != true
+ * @run main PingPong LTQ 500000
  */
 
 import java.time.Duration;
