@@ -21,8 +21,8 @@
  * questions.
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.Collection;
@@ -36,25 +36,23 @@ public class AbstractVectorLoadStoreTest extends AbstractVectorTest {
             ByteOrder.BIG_ENDIAN, ByteOrder.LITTLE_ENDIAN);
 
     static final List<IntFunction<ByteBuffer>> BYTE_BUFFER_GENERATORS = List.of(
-            withToString("HB:RW:NE", (int s) -> {
-                return ByteBuffer.allocate(s)
-                        .order(ByteOrder.nativeOrder());
-            }),
-            withToString("DB:RW:NE", (int s) -> {
-                return ByteBuffer.allocateDirect(s)
-                        .order(ByteOrder.nativeOrder());
-            }),
-            withToString("MS:RW:NE", (int s) -> {
-                return MemorySegment.allocateNative(s, MemorySession.openImplicit())
+            withToString("HB:RW:NE", (int s) ->
+                    ByteBuffer.allocate(s)
+                        .order(ByteOrder.nativeOrder())),
+            withToString("DB:RW:NE", (int s) ->
+                    ByteBuffer.allocateDirect(s)
+                        .order(ByteOrder.nativeOrder())),
+            withToString("MS:RW:NE", (int s) ->
+                    Arena.ofAuto().allocate(s)
                         .asByteBuffer()
-                        .order(ByteOrder.nativeOrder());
-            })
+                        .order(ByteOrder.nativeOrder())
+            )
     );
 
     static final List<IntFunction<MemorySegment>> MEMORY_SEGMENT_GENERATORS = List.of(
-            withToString("HMS", (int s) -> {
-                return MemorySegment.allocateNative(s, MemorySession.openImplicit());
-            }),
+            withToString("HMS", (int s) ->
+                    Arena.ofAuto().allocate(s)
+            ),
             withToString("DMS", (int s) -> {
                 byte[] b = new byte[s];
                 return MemorySegment.ofArray(b);
@@ -62,4 +60,3 @@ public class AbstractVectorLoadStoreTest extends AbstractVectorTest {
     );
 
 }
-
