@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,6 +26,7 @@ package jdk.jfr.api.consumer;
 import java.io.IOException;
 import java.time.Duration;
 import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
@@ -91,6 +92,12 @@ public class TestRecordedObject {
 
         @Timespan(Timespan.SECONDS)
         long durationSeconds = DURATION_VALUE.toSeconds();
+
+        @Timespan(Timespan.SECONDS)
+        long foreverMillis = Long.MAX_VALUE;
+
+        @Timespan(Timespan.NANOSECONDS)
+        long foreverNanoseconds = Long.MAX_VALUE;
 
         @Timestamp(Timestamp.MILLISECONDS_SINCE_EPOCH)
         long instantMillis = 1000;
@@ -179,6 +186,9 @@ public class TestRecordedObject {
         Asserts.assertEquals(event.getDuration("durationMicros"), DURATION_VALUE);
         Asserts.assertEquals(event.getDuration("durationMillis"), DURATION_VALUE);
         Asserts.assertEquals(event.getDuration("durationSeconds"), DURATION_VALUE);
+        Asserts.assertEquals(event.getDuration("foreverMillis"), ChronoUnit.FOREVER.getDuration());
+        Asserts.assertEquals(event.getDuration("foreverNanoseconds"), ChronoUnit.FOREVER.getDuration());
+
         Asserts.assertEquals(event.getInstant("instantMillis").toEpochMilli(), 1000L);
         if (!event.getInstant("instantTicks").isBefore(INSTANT_VALUE)) {
             throw new AssertionError("Expected start time of JVM to before call to Instant.now()");
@@ -382,7 +392,7 @@ public class TestRecordedObject {
             r.stop();
             List<RecordedEvent> events = Events.fromRecording(r);
             Events.hasEvents(events);
-            return events.get(0);
+            return events.getFirst();
         }
     }
 
