@@ -2,8 +2,9 @@
  * @test /nodynamiccopyright/
  * @bug 8263590
  * @summary Verify correct warnings are produced for raw types in bindings
- * @compile/ref=RawTypeBindingWarning.out -Xlint:rawtypes -XDrawDiagnostics --enable-preview -source ${jdk.version} RawTypeBindingWarning.java
+ * @compile/ref=RawTypeBindingWarning.out -Xlint:rawtypes -XDrawDiagnostics RawTypeBindingWarning.java
  */
+
 public class RawTypeBindingWarning<T> {
     public static boolean t(Object o) {
         return o instanceof RawTypeBindingWarning w;
@@ -11,10 +12,6 @@ public class RawTypeBindingWarning<T> {
     public static void t2(Object o) {
         switch (o) {
             case RawTypeBindingWarning w -> {}
-            default -> {}
-        }
-        switch (o) {
-            case (RawTypeBindingWarning w) -> {}
             default -> {}
         }
         switch (o) {
