@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,8 +22,9 @@
  */
 package org.openjdk.bench.java.lang.foreign;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -47,7 +48,7 @@ import static java.lang.foreign.ValueLayout.JAVA_DOUBLE;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
-@Fork(value = 3, jvmArgsAppend = "--enable-preview")
+@Fork(3)
 public class LoopOverNonConstantFP {
 
     static final Unsafe unsafe = Utils.unsafe;
@@ -56,7 +57,7 @@ public class LoopOverNonConstantFP {
     static final int CARRIER_SIZE = (int)JAVA_DOUBLE.byteSize();
     static final int ALLOC_SIZE = ELEM_SIZE * CARRIER_SIZE;
 
-    MemorySession session;
+    Arena arena;
     MemorySegment segmentIn, segmentOut;
     long unsafe_addrIn, unsafe_addrOut;
     ByteBuffer byteBufferIn, byteBufferOut;
@@ -71,9 +72,9 @@ public class LoopOverNonConstantFP {
         for (int i = 0; i < ELEM_SIZE; i++) {
             unsafe.putDouble(unsafe_addrOut + (i * CARRIER_SIZE), i);
         }
-        session = MemorySession.openConfined();
-        segmentIn = MemorySegment.allocateNative(ALLOC_SIZE, session);
-        segmentOut = MemorySegment.allocateNative(ALLOC_SIZE, session);
+        arena = Arena.ofConfined();
+        segmentIn = arena.allocate(ALLOC_SIZE, 1);
+        segmentOut = arena.allocate(ALLOC_SIZE, 1);
         for (int i = 0; i < ELEM_SIZE; i++) {
             segmentIn.setAtIndex(JAVA_DOUBLE, i, i);
         }
@@ -92,7 +93,7 @@ public class LoopOverNonConstantFP {
 
     @TearDown
     public void tearDown() {
-        session.close();
+        arena.close();
         unsafe.invokeCleaner(byteBufferIn);
         unsafe.invokeCleaner(byteBufferOut);
         unsafe.freeMemory(unsafe_addrIn);
