@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,15 +22,10 @@
  */
 package org.openjdk.bench.java.lang.foreign.points.support;
 
-import java.lang.foreign.Addressable;
-import java.lang.foreign.Linker;
-import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemoryLayout;
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.*;
+
 import org.openjdk.bench.java.lang.foreign.CLayouts;
 
-import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 
@@ -53,37 +48,39 @@ public class PanamaPoint extends CLayouts implements AutoCloseable {
         System.loadLibrary("Point");
         SymbolLookup loaderLibs = SymbolLookup.loaderLookup();
         MH_distance = abi.downcallHandle(
-                loaderLibs.lookup("distance").get(),
+                loaderLibs.find("distance").get(),
                 FunctionDescriptor.of(C_DOUBLE, LAYOUT, LAYOUT)
         );
         MH_distance_ptrs = abi.downcallHandle(
-                loaderLibs.lookup("distance_ptrs").get(),
+                loaderLibs.find("distance_ptrs").get(),
                 FunctionDescriptor.of(C_DOUBLE, C_POINTER, C_POINTER)
         );
     }
 
+    Arena arena;
     private final MemorySegment segment;
 
     public PanamaPoint(int x, int y) {
-        this.segment = MemorySegment.allocateNative(LAYOUT, MemorySession.openConfined());
+        this.arena = Arena.ofConfined();
+        this.segment = arena.allocate(LAYOUT);
         setX(x);
         setY(y);
     }
 
     public void setX(int x) {
-        VH_x.set(segment, x);
+        VH_x.set(segment, 0L, x);
     }
 
     public int getX() {
-        return (int) VH_x.get(segment);
+        return (int) VH_x.get(segment, 0L);
     }
 
     public void setY(int y) {
-        VH_y.set(segment, y);
+        VH_y.set(segment, 0L, y);
     }
 
     public int getY() {
-        return (int) VH_y.get(segment);
+        return (int) VH_y.get(segment, 0L);
     }
 
     public double distanceTo(PanamaPoint other) {
@@ -96,7 +93,7 @@ public class PanamaPoint extends CLayouts implements AutoCloseable {
 
     public double distanceToPtrs(PanamaPoint other) {
         try {
-            return (double) MH_distance_ptrs.invokeExact((Addressable)segment, (Addressable)other.segment);
+            return (double) MH_distance_ptrs.invokeExact(segment, other.segment);
         } catch (Throwable throwable) {
             throw new InternalError(throwable);
         }
@@ -104,6 +101,6 @@ public class PanamaPoint extends CLayouts implements AutoCloseable {
 
     @Override
     public void close() {
-        segment.session().close();
+        arena.close();
     }
 }
